--- a/styles/theme.css
+++ b/styles/theme.css
@@ -30,16 +30,16 @@ body {
 }
 h1 {
     font-size: 2em;
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 h2 {
     font-size: 1.5em;
-    line-height: 1em;
+    line-height: 1;
     margin:1em 0;
 }
 h3 {
     font-size: 1.25em;
-    line-height: 1.2em;
+    line-height: 1.2;
 }
 p {
     margin: 1.5em 0;
@@ -237,6 +237,8 @@ hr {
 
 .change-language {
     float: right;
+    position:relative;
+    z-index:100;
 }
 .change-language p {
     margin:0;
